# yahoo-finance-dash

./: .gitignore  API requests.ipynb  Dockerfile  README.md  docker-compose.yml  pyproject.toml
yahoo_finance_dash/: __main__.py  app.py  component_builder.py  config.py  data_grabber.py  page_template.py
yahoo_finance_dash/dashboards/: __init__.py  dashx.py  dashy.py  dashz.py  index.py
