[tool.poetry]
name = "yahoo-finance-dash"
version = "0.1.0"
description = "Dashboards of Australian stocks, created using Plotly's Dash library."
authors = ["Kelvin Ducray <kelvin.ducray@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.3"
dash = "^2.3.1"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
coloredlogs = "^15.0.1"
gunicorn = "^20.1.0"
requests = "^2.27.1"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.942"
jupyter = "^1.0.0"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
